--- a/package.json
+++ b/package.json
@@ -1,25 +1,20 @@
 {
-  "name": "express-burger-handle",
+  "name": "mvc_design",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Mf948/Express-Burger-Handle.git"
-  },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Mf948/Express-Burger-Handle/issues"
-  },
-  "homepage": "https://github.com/Mf948/Express-Burger-Handle#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "express-handlebars": "^5.2.1",
-    "mysql": "^2.18.1"
-  }
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "mysql": "^2.16.0"
+  },
+  "devDependencies": {
+    "handlebars-helper-css": "^0.1.0"
+  },
+  "description": ""
 }
